--- a/assets/stylesheets/css/style.css
+++ b/assets/stylesheets/css/style.css
@@ -1,6 +1,33 @@
 .feature-image {
-  background-color: lightgray;
+  background-color: #003667;
   padding: 150px 0;
-  text-align: center; }
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  position: relative; }
+  .feature-image .content {
+    max-width: 400px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 100; }
+
+.feature-image-default {
+  background-image: url("../../img/2-dogs-playing.png"); }
+
+.opaque-cover {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 50; }
+
+.hero-title {
+  font-size: 64px; }
+
+.hero-subtitle {
+  font-size: 26px; }
 
 /*# sourceMappingURL=style.css.map */
