--- a/assets/stylesheets/sass/style.scss
+++ b/assets/stylesheets/sass/style.scss
@@ -36,3 +36,35 @@
 .hero-subtitle {
     font-size: 26px;
 }
+
+.animal hr {
+    width: 100%!important;
+}
+
+.animal-post {
+    display: flex;
+}
+
+.animal-thumbnail {
+    margin-right: 10px;
+    flex-shrink: 0;
+
+    img {
+        width: 250px;
+    }
+}
+
+.animal-info {
+    display: inline-block;
+    flex-grow: 1;
+
+    p:not(:last-of-type) {
+        margin-bottom: 0;
+    }
+}
+
+.widget-area {
+    padding: 10px;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+}
