Added bottom margin to .feature-image

--- a/assets/stylesheets/css/style.css
+++ b/assets/stylesheets/css/style.css
@@ -1,6 +1,7 @@
 .feature-image {
   background-color: #003667;
   padding: 150px 0;
+  margin-bottom: 1rem;
   text-align: center;
   background-size: cover;
   background-position: center;
