--- a/assets/stylesheets/sass/style.scss
+++ b/assets/stylesheets/sass/style.scss
@@ -1,5 +1,9 @@
 $greyBorder: 1px solid lightgrey;
 
+.site-main > .container {
+    margin-top: 1rem;
+}
+
 .feature-image {
 	background-color: #003667;
     padding: 50px 0;
