Made the title more apparent for single adoption posts

--- a/assets/stylesheets/sass/style.scss
+++ b/assets/stylesheets/sass/style.scss
@@ -52,6 +52,10 @@ $greyBorder: 1px solid lightgrey;
     display: flex;
 }
 
+.animal-title > *{
+    vertical-align: middle;
+}
+
 .animal-thumbnail {
     margin-right: 10px;
     flex-shrink: 0;
