--- a/assets/stylesheets/css/style.css
+++ b/assets/stylesheets/css/style.css
@@ -42,6 +42,9 @@
   display: -ms-flexbox;
   display: flex; }
 
+.animal-title > * {
+  vertical-align: middle; }
+
 .animal-thumbnail {
   margin-right: 10px;
   -ms-flex-negative: 0;
