--- a/assets/stylesheets/sass/style.scss
+++ b/assets/stylesheets/sass/style.scss
@@ -142,4 +142,9 @@ blockquote {
             width: 250px;
         }
     }
+
+    // WPForms Form Styling
+    .wpforms-container {
+        max-width: 400px;
+    }
 }
