--- a/assets/stylesheets/css/style.css
+++ b/assets/stylesheets/css/style.css
@@ -1,5 +1,6 @@
 .site-main > .container {
-  margin-top: 1rem; }
+  margin-top: 1rem;
+  margin-bottom: 1rem; }
 
 .feature-image {
   background-color: #003667;
@@ -64,7 +65,10 @@
   padding: 10px;
   border: 1px solid lightgrey;
   border-radius: 5px;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0; }
 
 blockquote {
   border-top: 1px solid lightgrey;
@@ -89,6 +93,15 @@ blockquote {
 
 .navbar-brand .name {
   width: 200px; }
+
+.btn-primary {
+  background-color: #014282;
+  border-color: #014282; }
+
+.white-link {
+  color: white; }
+  .white-link:hover {
+    color: white; }
 
 @media screen and (min-width: 576px) {
   .navbar-brand .animal-sketch {
