--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 Theme Name: Humane Society
 Theme URI: http://underscores.me/
 Author: Forrest Wilson-Jennings
-Author URI: http://underscores.me/
+Author URI: http://forrest-wilson.com/
 Description: A Custom WordPress Theme for the Humane Society
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: humane-society
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Tags: custom-background, custom-logo, custom-menu, featured-images
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
